@@ -134,6 +134,7 @@ set fullurl http://user:pass@[info hostname]:$port/a/b/c
 set binurl //[info hostname]:$port/binary
 set posturl //[info hostname]:$port/post
 set badposturl //[info hostname]:$port/droppost
+set authorityurl //[info hostname]:$port
 test http-3.4 {http::geturl} {
     set token [http::geturl $url]
     http::data $token
@@ -351,6 +352,18 @@ User-Agent .*
 Connection close
 Content-Type {text/plain;charset=utf-8}
 Content-Length 5}
+test http-3.30 {http::geturl query without path} -body {
+    set token [http::geturl $authorityurl?var=val]
+    http::ncode $token
+} -cleanup {
+    catch { http::cleanup $token }
+} -result 200
+test http-3.31 {http::geturl fragment without path} -body {
+    set token [http::geturl "$authorityurl#fragment42"]
+    http::ncode $token
+} -cleanup {
+    catch { http::cleanup $token }
+} -result 200
 
 test http-4.1 {http::Event} {
     set token [http::geturl $url -keepalive 0]
